--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
     <string name="imageview">ImageView</string>
+    <string name="title">음악 이름</string>
+    <string name="singer">가수 이름</string>
+    <string name="musicImage">musicImage</string>
+    <string name="backButton">BackButton</string>
+    <string name="recommendation">recommendation</string>
 </resources>
